<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>stub-idp</groupId>
    <artifactId>stub-idp-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <!-- language version -->
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- build plugins -->
        <maven_assembly_plugin.version>3.2.0</maven_assembly_plugin.version>
        <maven_compiler_plugin.version>3.8.1</maven_compiler_plugin.version>
        <maven_dependency_plugin.version>3.1.2</maven_dependency_plugin.version>
        <maven_failsafe_plugin.version>3.0.0-M4</maven_failsafe_plugin.version>
        <maven_jar_plugin.version>3.2.0</maven_jar_plugin.version>
        <maven_surefire_plugin.version>3.0.0-M4</maven_surefire_plugin.version>

        <!-- runtime dependencies -->
        <checker_qual.version>3.3.0</checker_qual.version>
        <commons_text.version>1.8</commons_text.version>
        <commons_validator.version>1.6</commons_validator.version>
        <dropwizard.version>2.0.8</dropwizard.version>
        <flyway.version>6.3.3</flyway.version>
        <freemarker.version>2.3.30</freemarker.version>
        <guava.version>29.0-jre</guava.version>
        <jackson.version>2.10.3</jackson.version>
        <jakarta_activation.version>1.2.2</jakarta_activation.version>
        <jakarta_inject.version>2.6.1</jakarta_inject.version>
        <jakarta_validation.version>2.0.2</jakarta_validation.version>
        <jakarta_xml_bind.version>2.3.3</jakarta_xml_bind.version>
        <jbcrypt.version>0.4-atlassian-1</jbcrypt.version>
        <jdbi.version>3.12.2</jdbi.version>
        <jsoup.version>1.13.1</jsoup.version>
        <logback.version>1.2.3</logback.version>
        <logstash_logback_encoder.version>6.3</logstash_logback_encoder.version>
        <nimbus_jwt.version>8.14.1</nimbus_jwt.version>
        <opensaml.version>4.0.0</opensaml.version>
        <postgres.version>42.2.12</postgres.version>
        <prometheus_client.version>0.8.1</prometheus_client.version>
        <shibboleth_utils.version>8.0.0</shibboleth_utils.version>
        <slf4j.version>1.7.30</slf4j.version>
        <snakeyaml.version>1.26</snakeyaml.version>

        <!-- test dependencies -->
        <assertj.version>3.15.0</assertj.version>
        <commons_codec.version>1.14</commons_codec.version>
        <h2.version>1.4.200</h2.version>
        <junit.version>5.6.2</junit.version>
        <mockito.version>3.3.3</mockito.version>
    </properties>

    <modules>
        <module>stub-idp</module>
        <module>stub-sp</module>
        <module>shared-lib</module>
        <module>hub-saml</module>
        <module>saml-extensions</module>
        <module>saml-metadata-bindings</module>
        <module>saml-security</module>
        <module>saml-serializers</module>
        <module>saml-utils</module>
        <module>trust-anchor</module>
        <module>stub-idp-saml</module>
        <module>stub-idp-saml-test</module>
        <module>integration-tests</module>
        <module>test-utils</module>
        <module>common-utils</module>
        <module>rest-utils</module>
        <module>security-utils</module>
        <module>dropwizard-logstash</module>
        <module>dropwizard-prometheus</module>
        <module>dev-pki</module>
    </modules>

    <repositories>
        <repository>
            <id>jcenter</id>
            <url>https://jcenter.bintray.com</url>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
        <repository>
            <id>shibboleth opensaml</id>
            <url>https://build.shibboleth.net/nexus/content/repositories/releases</url>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
    </repositories>

    <build>
        <plugins>
            <!--https://mark.koli.ch/fail-build-on-java-compiler-warnings-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven_compiler_plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                        <arg>-Xlint:-processing</arg>
                        <arg>-Xlint:-serial</arg>
                        <arg>-Werror</arg>
                    </compilerArgs>
<!--                    <failOnError>true</failOnError>-->
<!--                    <failOnWarning>false</failOnWarning>-->
<!--                    <showDeprecation>true</showDeprecation>-->
<!--                    <showWarnings>false</showWarnings>-->
<!--                    <forceJavacCompilerUse>false</forceJavacCompilerUse>-->
<!--                    <verbose>false</verbose>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven_surefire_plugin.version}</version>
                <configuration>
                    <!-- test order is different locally vs travis and leads to failures -->
                    <runOrder>alphabetical</runOrder>
<!--                    <forkCount>0</forkCount>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven_failsafe_plugin.version}</version>
                <configuration>
                    <!-- test order is different locally vs travis and leads to failures -->
                    <runOrder>alphabetical</runOrder>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
